# fillit

./: CMakeLists.txt  Makefile  author  backtrack.c  fil_valid.txt  fillit  fillit.h  ft_bzero.c  ft_memmove.c  ft_putchar.c  ft_putstr.c  ft_strcpy.c  ft_strlen.c  main.c  mmoves.c  research.c  sOperations.c  s_operations.c  security.c  traktor.c  vdv.c
